brandnewproject/src/objects/sales_number__c.object
<CustomObject>
    <fields>
        <fullName>ABC__c</fullName>
        <formula>Name  &amp; &quot;,&quot; &amp;  Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Good_ambiance_at_store__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Good ambiance at store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_number__c</fullName>
        <displayFormat>Inv-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Invoice number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>MRP__c</fullName>
        <label>MRP</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sale_amount__c</fullName>
        <label>Sale amount</label>
        <precision>16</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>card_number__c</fullName>
        <label>card number</label>
        <length>16</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bangalore</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Kolkatha</fullName>
                </value>
                <value>
                    <fullName>Mubmai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>customer_email__c</fullName>
        <label>customer email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>product_color__c</fullName>
        <label>product color</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>blue</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>sales number</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sales numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MRP_less_than_sale_amount</fullName>
        <active>true</active>
        <errorConditionFormula>MRP__c  &gt;  Sale_amount__c</errorConditionFormula>
        <errorDisplayField>MRP__c</errorDisplayField>
        <errorMessage>MRP cant be more that sale amount</errorMessage>
    </validationRules>
</CustomObject>